fullSandbox11072023/force-app/main/default/objects/Survey_Cardiac_Service__c/Survey_Cardiac_Service__c.object-meta.xml
<CustomObject>
    <label>Survey - Cardiac Service</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Survey - Cardiac Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey - Cardiac Service</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>