fullSandbox11072023/force-app/main/default/objects/Survey_Cardiac_Service__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Survey - Cardiac Service</relationshipLabel>
    <relationshipName>Survey_Cardiac_Service</relationshipName>
    <type>Lookup</type>
</CustomField>