fullSandbox11072023/force-app/main/default/objects/Survey_Cardiac_Service__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>4d. Email:</label>
    <type>Email</type>
</CustomField>