fullSandbox11072023/force-app/main/default/objects/Survey_Cardiac_Service__c/fields/More_info_requested__c.field-meta.xml
<CustomField>
    <fullName>More_info_requested__c</fullName>
    <label>5. More info requested?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Biomedical Training Classes</fullName>
            </value>
            <value>
                <fullName>Service Plans</fullName>
            </value>
            <value>
                <fullName>Preventative Maintenance Options</fullName>
            </value>
            <value>
                <fullName>Ordering Replacement Parts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>