fullSandbox11072023/force-app/main/default/objects/Survey_Cardiac_Service__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>4a. Name:</label>
    <length>30</length>
    <type>Text</type>
</CustomField>