fullSandbox11072023/force-app/main/default/objects/Survey_Cardiac_Service__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>4c. Phone:</label>
    <type>Phone</type>
</CustomField>