fullSandbox11072023/force-app/main/default/objects/Survey_Cardiac_Service__c/fields/Test_Multi__c.field-meta.xml
<CustomField>
    <fullName>Test_Multi__c</fullName>
    <label>Test Multi</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test1</fullName>
            </value>
            <value>
                <fullName>Test2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>