fullSandbox11072023/force-app/main/default/objects/Survey_Cardiac_Service__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>4b. Title:</label>
    <length>30</length>
    <type>Text</type>
</CustomField>