fullSandbox11072023/force-app/main/default/objects/Survey_Cardiac_Service__c/fields/Would_you_like_to_be_contacted__c.field-meta.xml
<CustomField>
    <fullName>Would_you_like_to_be_contacted__c</fullName>
    <formula>IF(X4Would_you_like_to_be_contacted__c=True, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Would you like to be contacted?.</label>
    <type>Text</type>
</CustomField>