fullSandbox11072023/force-app/main/default/objects/Survey_Cardiac_Service__c/fields/X1_Contact_Initiation__c.field-meta.xml
<CustomField>
    <fullName>X1_Contact_Initiation__c</fullName>
    <description>1. How did you initiate the first contact for Service?</description>
    <inlineHelpText>1. How did you initiate the first contact for Service?</inlineHelpText>
    <label>1. Contact Initiation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phoned the Technical Support Hotline?</fullName>
            </value>
            <value>
                <fullName>Phoned my Service representative directly?</fullName>
            </value>
            <value>
                <fullName>Phoned a member of the Service Team in the Chelmsford Office?</fullName>
            </value>
            <value>
                <fullName>Emailed a member of the Service Team in the Chelmsford Office?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>