fullSandbox11072023/force-app/main/default/objects/Survey_Cardiac_Service__c/fields/X1a_Contact_Initiation_Other__c.field-meta.xml
<CustomField>
    <fullName>X1a_Contact_Initiation_Other__c</fullName>
    <description>Contact Initiation (Other)</description>
    <inlineHelpText>Contact Initiation (Other)</inlineHelpText>
    <label>1a. Contact Initiation (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>