fullSandbox11072023/force-app/main/default/objects/Survey_Cardiac_Service__c/fields/X2_Multi_Catch__c.field-meta.xml
<CustomField>
    <fullName>X2_Multi_Catch__c</fullName>
    <label>2 Multi Catch</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>