fullSandbox11072023/force-app/main/default/objects/Survey_Cardiac_Service__c/fields/X2a_Easy_to_contact__c.field-meta.xml
<CustomField>
    <fullName>X2a_Easy_to_contact__c</fullName>
    <label>2a. Easy to contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Strongly disagree</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Strongly agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>