fullSandbox11072023/force-app/main/default/objects/Survey_Cardiac_Service__c/fields/X2c_Solved_problem_referred_to_resource__c.field-meta.xml
<CustomField>
    <fullName>X2c_Solved_problem_referred_to_resource__c</fullName>
    <label>2c. Solved problem/referred to resource?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Strongly disagree</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Strongly agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>