fullSandbox11072023/force-app/main/default/objects/Survey_Cardiac_Service__c/fields/X2d_Resolved_in_timely_manner__c.field-meta.xml
<CustomField>
    <fullName>X2d_Resolved_in_timely_manner__c</fullName>
    <label>2d. Resolved in timely manner?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Strongly disagree</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Strongly agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>