fullSandbox11072023/force-app/main/default/objects/Survey_Cardiac_Service__c/fields/X3_Likeliness_to_refer_a_colleague__c.field-meta.xml
<CustomField>
    <fullName>X3_Likeliness_to_refer_a_colleague__c</fullName>
    <label>3. Likeliness to refer a colleague?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very likely</fullName>
            </value>
            <value>
                <fullName>Likely</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Unlikely</fullName>
            </value>
            <value>
                <fullName>Very unlikely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>