fullSandbox11072023/force-app/main/default/objects/Survey_Cardiac_Service__c/fields/X3a_Why_Unlikely_very_unlikely__c.field-meta.xml
<CustomField>
    <fullName>X3a_Why_Unlikely_very_unlikely__c</fullName>
    <label>3a. Why Unlikely/Very unlikely?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Poor follow-up on our Service related issues</fullName>
            </value>
            <value>
                <fullName>It takes too long to get a response from our Service representative</fullName>
            </value>
            <value>
                <fullName>Cost of Service offerings is too high</fullName>
            </value>
            <value>
                <fullName>Issue took too long to be resolved</fullName>
            </value>
            <value>
                <fullName>My issue was not resolved to my satisfaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>