fullSandbox11072023/force-app/main/default/objects/Survey_Cardiac_Service__c/fields/X3b_Other_Likely_Unlikely_to_Ref__c.field-meta.xml
<CustomField>
    <fullName>X3b_Other_Likely_Unlikely_to_Ref__c</fullName>
    <label>3b. Other: Likely/Unlikely to Ref</label>
    <length>30</length>
    <type>Text</type>
</CustomField>