fullSandbox11072023/force-app/main/default/objects/Survey_Cardiac_Service__c/fields/X4Would_you_like_to_be_contacted__c.field-meta.xml
<CustomField>
    <fullName>X4Would_you_like_to_be_contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>4. Would you like to be contacted?</label>
    <type>Checkbox</type>
</CustomField>